--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Genascope Dashboard</title>
+    <title>GenAScope - Genetic Analysis & Patient Management</title>
+    <meta name="description" content="Advanced genetic analysis and patient management platform" />
   </head>
   <body>
     <div id="root"></div>
